snapshots/serde/test_suite/tests/ui/precondition/serialize_field_identifier.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
{
  "name": null,
  "start_line": 1,
  "end_line": 10,
  "kind": "unit",
  "spaces": [
    {
      "name": "main",
      "start_line": 10,
      "end_line": 10,
      "kind": "function",
      "spaces": [],
      "metrics": {
        "nargs": {
          "total_functions": 0.0,
          "total_closures": 0.0,
          "average_functions": 0.0,
          "average_closures": 0.0,
          "total": 0.0,
          "average": 0.0,
          "functions_min": 0.0,
          "functions_max": 0.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "nexits": {
          "sum": 0.0,
          "average": 0.0,
          "min": 0.0,
          "max": 0.0
        },
        "cognitive": {
          "sum": 0.0,
          "average": 0.0,
          "min": 0.0,
          "max": 0.0
        },
        "cyclomatic": {
          "sum": 1.0,
          "average": 1.0,
          "min": 1.0,
          "max": 1.0
        },
        "halstead": {
          "n1": 3.0,
          "N1": 3.0,
          "n2": 1.0,
          "N2": 1.0,
          "length": 4.0,
          "estimated_program_length": 4.754887502163468,
          "purity_ratio": 1.188721875540867,
          "vocabulary": 4.0,
          "volume": 8.0,
          "difficulty": 1.5,
          "level": 0.6666666666666666,
          "effort": 12.0,
          "time": 0.6666666666666666,
          "bugs": 0.0017471609294725976
        },
        "loc": {
          "sloc": 1.0,
          "ploc": 1.0,
          "lloc": 0.0,
          "cloc": 0.0,
          "blank": 0.0,
          "sloc_average": 1.0,
          "ploc_average": 1.0,
          "lloc_average": 0.0,
          "cloc_average": 0.0,
          "blank_average": 0.0,
          "sloc_min": 1.0,
          "sloc_max": 1.0,
          "cloc_min": 0.0,
          "cloc_max": 0.0,
          "ploc_min": 1.0,
          "ploc_max": 1.0,
          "lloc_min": 0.0,
          "lloc_max": 0.0,
          "blank_min": 0.0,
          "blank_max": 0.0
        },
        "nom": {
          "functions": 1.0,
          "closures": 0.0,
          "functions_average": 1.0,
          "closures_average": 0.0,
          "total": 1.0,
          "average": 1.0,
          "functions_min": 1.0,
          "functions_max": 1.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "mi": {
          "mi_original": 159.95690398326485,
          "mi_sei": 155.17000000000002,
          "mi_visual_studio": 93.54204911302038
        },
        "abc": {
          "assignments": 0.0,
          "branches": 0.0,
          "conditions": 0.0,
          "magnitude": 0.0,
          "assignments_average": 0.0,
          "branches_average": 0.0,
          "conditions_average": 0.0,
          "assignments_min": 0.0,
          "assignments_max": 0.0,
          "branches_min": 0.0,
          "branches_max": 0.0,
          "conditions_min": 0.0,
          "conditions_max": 0.0
        }
      }
    }
  ],
  "metrics": {
    "nargs": {
      "total_functions": 0.0,
      "total_closures": 0.0,
      "average_functions": 0.0,
      "average_closures": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "nexits": {
      "sum": 0.0,
      "average": 0.0,
      "min": 0.0,
      "max": 0.0
    },
    "cognitive": {
      "sum": 0.0,
      "average": 0.0,
      "min": 0.0,
      "max": 0.0
    },
    "cyclomatic": {
      "sum": 2.0,
      "average": 1.0,
      "min": 1.0,
      "max": 1.0
    },
    "halstead": {
      "n1": 6.0,
      "N1": 11.0,
      "n2": 8.0,
      "N2": 9.0,
      "length": 20.0,
      "estimated_program_length": 39.50977500432694,
      "purity_ratio": 1.975488750216347,
      "vocabulary": 14.0,
      "volume": 76.14709844115208,
      "difficulty": 3.375,
      "level": 0.2962962962962963,
      "effort": 256.9964572388883,
      "time": 14.277580957716017,
      "bugs": 0.013474009098794478
    },
    "loc": {
      "sloc": 10.0,
      "ploc": 8.0,
      "lloc": 0.0,
      "cloc": 0.0,
      "blank": 2.0,
      "sloc_average": 5.0,
      "ploc_average": 4.0,
      "lloc_average": 0.0,
      "cloc_average": 0.0,
      "blank_average": 1.0,
      "sloc_min": 1.0,
      "sloc_max": 1.0,
      "cloc_min": 0.0,
      "cloc_max": 0.0,
      "ploc_min": 1.0,
      "ploc_max": 1.0,
      "lloc_min": 0.0,
      "lloc_max": 0.0,
      "blank_min": 0.0,
      "blank_max": 0.0
    },
    "nom": {
      "functions": 1.0,
      "closures": 0.0,
      "functions_average": 0.5,
      "closures_average": 0.0,
      "total": 1.0,
      "average": 0.5,
      "functions_min": 0.0,
      "functions_max": 1.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "mi": {
      "mi_original": 110.70825322134876,
      "mi_sei": 84.22103563471565,
      "mi_visual_studio": 64.74166855049634
    },
    "abc": {
      "assignments": 0.0,
      "branches": 0.0,
      "conditions": 0.0,
      "magnitude": 0.0,
      "assignments_average": 0.0,
      "branches_average": 0.0,
      "conditions_average": 0.0,
      "assignments_min": 0.0,
      "assignments_max": 0.0,
      "branches_min": 0.0,
      "branches_max": 0.0,
      "conditions_min": 0.0,
      "conditions_max": 0.0
    }
  }
}
